--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>NaoyukiMiyazaki.github.io</title>
+</head>
+<body>
+  <h1>Welcom from github.io!</h1>
+</body>
+</html>
