--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>NaoyukiMiyazaki.github.io</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Welcom from github.io!</h1>
+  <script src="app.js"></script>
 </body>
 </html>
