--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcom from github.io!</h1>
+  <h1>Welcome</h1>
+  <ol>
+    <li><input type="text" name="ws-url" placeholder="signaling server URL"><button id="server-connect-btn">connect server</button></li>
+    <li><button id="call-btn">Call</button></li>
+  </ol>
+  <video id="my-video"></video>
+  <video id="remote-video"></video>
   <script src="app.js"></script>
 </body>
 </html>
