--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>NaoyukiMiyazaki.github.io</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome</h1>
-  <ol>
-    <li><input type="text" name="ws-url" placeholder="signaling server URL"><button id="server-connect-btn">connect server</button></li>
-    <li><button id="call-btn">Call</button></li>
-  </ol>
-  <video id="my-video"></video>
-  <video id="remote-video"></video>
-  <script src="app.js"></script>
+  <h1>NaoyukiMiyazaki.github.io</h1>
+  <ul>
+    <li><a href="/svg-sprite-bg">svg-sprite-bg</a></li>
+  </ul>
 </body>
 </html>
