--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>NaoyukiMiyazaki.github.io</title>
 </head>
 <body>
   <h1>NaoyukiMiyazaki.github.io</h1>
+  <p>My Playground</p>
   <ul>
     <li><a href="/svg-sprite-bg">svg-sprite-bg</a></li>
   </ul>
