--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <h1>NaoyukiMiyazaki.github.io</h1>
   <p>My Playground</p>
   <ul>
-    <li><a href="/svg-sprite-bg">svg-sprite-bg</a></li>
+    <li><a href="/svg-sprite-bg/">svg-sprite-bg</a></li>
+    <li><a href="/relative-path/">relative-path</a></li>
   </ul>
 </body>
 </html>
