--- a/relative-path/index.html
+++ b/relative-path/index.html
@@ -15,6 +15,9 @@
     td {
       border-bottom: 1px solid #000;
     }
+    tbody th {
+      padding-right: 1em;
+    }
     td {
       padding: 1em;
     }
@@ -25,22 +28,7 @@
 <body>
   <h1>relative path</h1>
   <a href="https://github.com/NaoyukiMiyazaki/NaoyukiMiyazaki.github.io/tree/master/relative-path">https://github.com/NaoyukiMiyazaki/NaoyukiMiyazaki.github.io/tree/master/relative-path</a>
-<pre><code>
-index.html
-assets
-  ├─ css
-  │    └─ style.css
-  ├─ img
-  │    ├─ 1.png
-  │    ├─ 2.png
-  │    ├─ 3.png
-  │     .
-  │     .
-  │     .
-  │
-  └─ js
-       └─ index.js
-</code></pre>
+  <p><img src="ss.png" alt="ss"></p>
   <table>
     <thead>
       <tr>
