--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <ul>
     <li><a href="/svg-sprite-bg/">svg-sprite-bg</a></li>
     <li><a href="/relative-path/">relative-path</a></li>
+    <li><a href="/web-speech/">web-speech</a></li>
   </ul>
 </body>
 </html>
