--- a/web-speech/index.html
+++ b/web-speech/index.html
@@ -30,6 +30,7 @@
 </head>
 <body>
   <div class="button-area">
+      <button id="demo">demo</button>
       <button id="back">&#x23ee;back</button>
       <button id="start">start▶</button>
       <button id="stop">stop&#x23f9;</button>
