--- a/fullscreen-bg-video/index.html
+++ b/fullscreen-bg-video/index.html
@@ -51,6 +51,9 @@
 <body>
   <nav>
     <ul>
+      <li><a href="https://github.com/NaoyukiMiyazaki/NaoyukiMiyazaki.github.io/tree/master/fullscreen-bg-video" target="_blank">github</a>
+      </li>
+      <li><a href="./demo/">demo</a></li>
       <li><a href="#default"><pre><code>default</code></pre></a></li>
       <li><a href="#none"><pre><code>object-fit: none;</code></pre></a></li>
       <li><a href="#fill"><pre><code>object-fit: fill;</code></pre></a></li>
