--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li><a href="/svg-sprite-bg/">svg-sprite-bg</a></li>
     <li><a href="/relative-path/">relative-path</a></li>
     <li><a href="/web-speech/">web-speech</a></li>
+    <li><a href="/fullscreen-bg-video/">fullscreen-bg-video</a></li>
   </ul>
 </body>
 </html>
