--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="/relative-path/">relative-path</a></li>
     <li><a href="/web-speech/">web-speech</a></li>
     <li><a href="/fullscreen-bg-video/">fullscreen-bg-video</a></li>
+    <li><a href="/the-looming-c/">the-looming-c</a></li>
   </ul>
 </body>
 </html>
